# data_processing_of_V2AIX_dataset

./: .gitignore  CLAUDE.md  EXPERIMENTS_README.md  FILE_STRUCTURE_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  PHASE1_COMPLETE.md  PHASE1_IMPROVEMENTS.md  README.md  RUN_GUIDE.md  SOLUTION_COMPLETE.md  START_HERE.md  TASK3_PARSER_COMPLETE.md  TASK4_FILTERS_COMPLETE.md  TEST_REPORT.md  VEHICLE_ID_ISSUE.md  VEHICLE_ID_SUMMARY.md  analyze_results.py  batch_process.sh  config_full_dataset.yaml  config_mobile.yaml  config_scenarios_only.yaml  config_stationary.yaml  data_usage_guide.py  improved_processor_demo.py  process_v2aix.py  pyproject.toml  quick_example.py  requirements.txt  test_improved_processor.py  workaround_analysis.py
.claude/commands/: review.md
.claude/prompts/: review-python.md
.cursor/: scratchpad.md
documents/: data_contracts.md  example_config.yaml  paper.md  usage_instructions.md
documents/origin/: Usage_Instructions · Streamlit.mhtml
output/: analysis_report.txt
output/processed_aachen/: analysis_summary.csv  fused_data.parquet  trajectories.parquet  v2x_messages.parquet
src/v2aix_pipeline/: __init__.py  cli.py  config.py  coordinates.py  discovery.py  filters.py  models.py  output.py  parser.py  processor.py  trajectory.py  visualization.py
tests/: test_config_and_discovery.py  test_integration.py  test_parser.py
